--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -194,6 +194,8 @@ actually be implemented.
 \item [\refstepcounter{mnum} \mthemnum \label{mHH}:] Hardware-Hiding Module
 \item [\refstepcounter{mnum} \mthemnum \label{aci}:]
 Account Creation Interface
+\item [\refstepcounter{mnum} \mthemnum \label{accdc}:]
+Account Database Connector
 \item [\refstepcounter{mnum} \mthemnum \label{accd}:]
 Account Database
 \item [\refstepcounter{mnum} \mthemnum \label{aui}:]
@@ -281,6 +283,7 @@ Image
 \midrule
 
 \multirow{3}{0.3\textwidth}{Software Decision Module} & {Account Creation Controller}\\
+& Account Database Connector\\
 & Account Update Controller\\
 & Authentication Controller\\
 & Satellite Image Request Controller\\
@@ -538,6 +541,15 @@ to be implemented.
 \item[Services:] Validates the form information, creates an account with that information, and can upload the account to the database.
 \item[Implemented By:] OrbitWatch
 \item[Type of Module:] Abstract Object
+\end{description}
+
+\subsubsection{Account Database Connector (\mref{accdc})}
+
+\begin{description}
+\item[Secrets:] The database access key and database access algorithms.
+\item[Services:] Can request storage, insertion, updates and retrieval of user account data from the database.
+\item[Implemented By:] OrbitWatch
+\item[Type of Module:] Abstract Data Type
 \end{description}
 
 \subsubsection{Account Update Controller (\mref{auc})}
