--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -19,6 +19,7 @@
 \usepackage[section]{placeins}
 \usepackage{caption}
 \usepackage{fullpage}
+\usepackage{amsfonts}
 
 \hypersetup{
 bookmarks=true,     % show bookmarks bar?
@@ -893,6 +894,497 @@ The following table is taken directly from the Module Guide document for this pr
   \subsubsection{Local Functions}
 
   None
+  
+  % \wss{As appropriate} \wss{These functions are for the purpose of specification.
+  %   They are not necessarily something that is going to be implemented
+  %   explicitly.  Even if they are implemented, they are not exported; they only
+  %   have local scope.}
+
+\newpage
+
+
+% --------------------------------------------------------------------------------------
+% --/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\--
+% --------------------------------------------------------------------------------------
+
+\section{MIS of Object Extraction Manager }\label{object extraction manager}
+  
+  % \wss{You can reference SRS labels, such as R\ref{R_Inputs}.}
+  
+  % \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
+  
+  \subsection{Module}
+  
+  Object Extraction Manager
+  
+  \subsection{Uses}
+  
+  ImageObject Database Connector \ref{ImageObject database connector}\\
+  Label Database Connector \ref{label database connector}\\
+  Labeller Database Connector \ref{labeller database connector}\\
+  Image Prior Analyzer \ref{image prior analyzer}\\
+  Label Confidence Service \ref{label confidence service}\\
+  Object Extraction Service \ref{object extraction service}\\
+  Labeller Expertise Calculator \ref{labeller expertise calculator}\\
+
+  \subsection{Syntax}
+
+
+  
+  \subsubsection{Exported Constants}
+  None
+  \subsubsection{Exported Access Programs}
+  
+  \begin{center}
+  \begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+  \hline
+  \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+  \hline
+  getObjects & projectID & - & ValueError \\
+  
+  \end{tabular}
+  \end{center}
+  
+  \subsection{Semantics}
+  
+  \subsubsection{State Variables}
+  
+ None
+  
+  \subsubsection{Environment Variables}
+  
+  None
+  
+  \subsubsection{Assumptions}
+  
+  
+  \subsubsection{Access Routine Semantics}
+  
+  \noindent getObjects(ProjectID p):
+  \begin{itemize}
+  \item transition: Updates ImageObject database with identified objects \& confidence\\
+  and updates labeller expertise rating in labeller database
+  \item output: 
+  \item exception: Let P be the set of assigned ProjectIDs. Throw ValueError if $\neg (p \in \text{P})$\\
+  \end{itemize}
+
+
+  
+  % \wss{A module without environment variables or state variables is unlikely to
+  %   have a state transition.  In this case a state transition can only occur if
+  %   the module is changing the state of another module.}
+  
+  % \wss{Modules rarely have both a transition and an output.  In most cases you
+  %   will have one or the other.}
+  
+  \subsubsection{Local Functions}
+
+  generate query:
+   
+  
+  % \wss{As appropriate} \wss{These functions are for the purpose of specification.
+  %   They are not necessarily something that is going to be implemented
+  %   explicitly.  Even if they are implemented, they are not exported; they only
+  %   have local scope.}
+
+\newpage
+
+
+% --------------------------------------------------------------------------------------
+% --/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\--
+% --------------------------------------------------------------------------------------
+
+\section{MIS of Label Confidence Service }\label{label confidence service}
+  
+  % \wss{You can reference SRS labels, such as R\ref{R_Inputs}.}
+  
+  % \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
+  
+  \subsection{Module}
+  
+  Label Confidence Service
+  
+  \subsection{Uses}
+  
+  None
+
+  \subsection{Syntax}
+
+
+  
+  \subsubsection{Exported Constants}
+  None
+  \subsubsection{Exported Access Programs}
+  
+  \begin{center}
+  \begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+  \hline
+  \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+  \hline
+  getConfidence & list[label], list[labeller], list[ImageObject] & list[list[float]]  & ValueError \\
+  
+  \end{tabular}
+  \end{center}
+  
+  \subsection{Semantics}
+  
+  \subsubsection{State Variables}
+  
+ None
+  
+  \subsubsection{Environment Variables}
+  
+  None
+  
+  \subsubsection{Assumptions}
+  
+  
+  \subsubsection{Access Routine Semantics}
+  
+  \noindent getConfidence(list[label] labels , list[labeller] labellers, list[ImageObject] imageobjects):
+  \begin{itemize}
+  \item transition: 
+  \item output: return the confidence label of each extracted object
+  \item exception: Let L be the set of valid Labels. Throw ValueError if ($\exists \text{label} \in \text{labels} |: \neg (\text{label} \in \text{L})$)\\
+  Let X be the set of valid Labellers. Throw ValueError if ($\exists \text{labeller} \in \text{labellers} |: \neg (\text{labeller} \in \text{X})$)\\
+  Let I be the set of valid ImageObjects. Throw ValueError if ($\exists \text{imageobject} \in \text{imageobjects} |: \neg (\text{imageobject} \in \text{I})$)\\
+  \end{itemize}
+
+
+  
+  % \wss{A module without environment variables or state variables is unlikely to
+  %   have a state transition.  In this case a state transition can only occur if
+  %   the module is changing the state of another module.}
+  
+  % \wss{Modules rarely have both a transition and an output.  In most cases you
+  %   will have one or the other.}
+  
+  \subsubsection{Local Functions}
+
+   
+  
+  % \wss{As appropriate} \wss{These functions are for the purpose of specification.
+  %   They are not necessarily something that is going to be implemented
+  %   explicitly.  Even if they are implemented, they are not exported; they only
+  %   have local scope.}
+
+\newpage
+
+
+% --------------------------------------------------------------------------------------
+% --/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\--
+% --------------------------------------------------------------------------------------
+
+\section{MIS of Object Extraction Service }\label{object extraction service}
+  
+  % \wss{You can reference SRS labels, such as R\ref{R_Inputs}.}
+  
+  % \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
+  
+  \subsection{Module}
+  
+  Object Extraction Service
+  
+  \subsection{Uses}
+  
+  None
+
+  \subsection{Syntax}
+
+
+  
+  \subsubsection{Exported Constants}
+  None
+  \subsubsection{Exported Access Programs}
+  
+  \begin{center}
+  \begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+  \hline
+  \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+  \hline
+  getObjects & list[label], list[labeller], list[ImageObject], list[list[float]]& list[ImageObject]  & ValueError \\
+  
+  \end{tabular}
+  \end{center}
+  
+  \subsection{Semantics}
+  
+  \subsubsection{State Variables}
+  
+ None
+  
+  \subsubsection{Environment Variables}
+  
+  None
+  
+  \subsubsection{Assumptions}
+  
+  
+  \subsubsection{Access Routine Semantics}
+  
+  \noindent getConfidence(list[label] labels, list[labeller] labellers, list[ImageObject] imageobjects, list[list[float]] confidence):
+  \begin{itemize}
+  \item transition: 
+  \item output: returns a list of extracted image objects
+  \item exception: Let L be the set of valid Labels. Throw ValueError if ($\exists \text{label} \in \text{labels} |: \neg (\text{label} \in \text{L})$)\\
+  Let X be the set of valid Labellers. Throw ValueError if ($\exists \text{labeller} \in \text{labellers} |: \neg (\text{labeller} \in \text{X})$)\\
+  Let I be the set of valid ImageObjects. Throw ValueError if ($\exists \text{imageobject} \in \text{imageobjects} |: \neg (\text{imageobject} \in \text{I})$)\\
+  Throw ValueError if ($\exists i,j| x = \text{confidence[i][j]} : \neg (x \in \mathbb{R})$)\\
+  \end{itemize}
+
+
+  
+  % \wss{A module without environment variables or state variables is unlikely to
+  %   have a state transition.  In this case a state transition can only occur if
+  %   the module is changing the state of another module.}
+  
+  % \wss{Modules rarely have both a transition and an output.  In most cases you
+  %   will have one or the other.}
+  
+  \subsubsection{Local Functions}
+
+   
+  
+  % \wss{As appropriate} \wss{These functions are for the purpose of specification.
+  %   They are not necessarily something that is going to be implemented
+  %   explicitly.  Even if they are implemented, they are not exported; they only
+  %   have local scope.}
+
+\newpage
+
+
+% --------------------------------------------------------------------------------------
+% --/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\--
+% --------------------------------------------------------------------------------------
+
+\section{MIS of Label Confidence Service }\label{label confidence service}
+  
+  % \wss{You can reference SRS labels, such as R\ref{R_Inputs}.}
+  
+  % \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
+  
+  \subsection{Module}
+  
+  Label Confidence Service
+  
+  \subsection{Uses}
+  
+  None
+
+  \subsection{Syntax}
+
+
+  
+  \subsubsection{Exported Constants}
+  None
+  \subsubsection{Exported Access Programs}
+  
+  \begin{center}
+  \begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+  \hline
+  \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+  \hline
+  getObjects & list[label], list[labeller], list[ImageObject] & list[list[float]]  & ValueError \\
+  
+  \end{tabular}
+  \end{center}
+  
+  \subsection{Semantics}
+  
+  \subsubsection{State Variables}
+  
+ None
+  
+  \subsubsection{Environment Variables}
+  
+  None
+  
+  \subsubsection{Assumptions}
+  
+  
+  \subsubsection{Access Routine Semantics}
+  
+  \noindent getObjects(list[label] labels , list[labeller] labellers, list[ImageObject] imageobjects):
+  \begin{itemize}
+  \item transition: 
+  \item output: return the confidence label of each extracted object
+  \item exception: Let L be the set of valid Labels. Throw ValueError if ($\exists \text{label} \in \text{labels} |: \neg (\text{label} \in \text{L})$)\\
+  Let X be the set of valid Labellers. Throw ValueError if ($\exists \text{labeller} \in \text{labellers} |: \neg (\text{labeller} \in \text{X})$)\\
+  Let I be the set of valid ImageObjects. Throw ValueError if ($\exists \text{imageobject} \in \text{imageobjects} |: \neg (\text{imageobject} \in \text{I})$)\\
+  \end{itemize}
+
+
+  
+  % \wss{A module without environment variables or state variables is unlikely to
+  %   have a state transition.  In this case a state transition can only occur if
+  %   the module is changing the state of another module.}
+  
+  % \wss{Modules rarely have both a transition and an output.  In most cases you
+  %   will have one or the other.}
+  
+  \subsubsection{Local Functions}
+
+   
+  
+  % \wss{As appropriate} \wss{These functions are for the purpose of specification.
+  %   They are not necessarily something that is going to be implemented
+  %   explicitly.  Even if they are implemented, they are not exported; they only
+  %   have local scope.}
+
+\newpage
+
+
+% --------------------------------------------------------------------------------------
+% --/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\--
+% --------------------------------------------------------------------------------------
+
+\section{MIS of Image Prior Analyzer }\label{image prior analyzer}
+  
+  % \wss{You can reference SRS labels, such as R\ref{R_Inputs}.}
+  
+  % \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
+  
+  \subsection{Module}
+  
+  Image Prior Analyzer
+  
+  \subsection{Uses}
+  
+  None
+
+  \subsection{Syntax}
+
+
+  
+  \subsubsection{Exported Constants}
+  None
+  \subsubsection{Exported Access Programs}
+  
+  \begin{center}
+  \begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+  \hline
+  \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+  \hline
+  getPriors & list[image] & list[list[float]]  & ValueError \\
+  
+  \end{tabular}
+  \end{center}
+  
+  \subsection{Semantics}
+  
+  \subsubsection{State Variables}
+  
+ None
+  
+  \subsubsection{Environment Variables}
+  
+  None
+  
+  \subsubsection{Assumptions}
+  
+  
+  \subsubsection{Access Routine Semantics}
+  
+  \noindent getPriors(list[image] Images):
+  \begin{itemize}
+  \item transition: 
+  \item output: returns a list of priors for each pixel in the given images
+  \item exception: Let I be the set of valid Images. Throw ValueError if ($\exists \text{image} \in \text{images} |: \neg (\text{image} \in \text{I})$)\\
+  \end{itemize}
+
+
+  
+  % \wss{A module without environment variables or state variables is unlikely to
+  %   have a state transition.  In this case a state transition can only occur if
+  %   the module is changing the state of another module.}
+  
+  % \wss{Modules rarely have both a transition and an output.  In most cases you
+  %   will have one or the other.}
+  
+  \subsubsection{Local Functions}
+
+   
+  
+  % \wss{As appropriate} \wss{These functions are for the purpose of specification.
+  %   They are not necessarily something that is going to be implemented
+  %   explicitly.  Even if they are implemented, they are not exported; they only
+  %   have local scope.}
+
+\newpage
+
+% --------------------------------------------------------------------------------------
+% --/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\--
+% --------------------------------------------------------------------------------------
+
+\section{MIS of Labeller Expertise Calculator }\label{labeller expertise calculator}
+  
+  % \wss{You can reference SRS labels, such as R\ref{R_Inputs}.}
+  
+  % \wss{It is also possible to use \LaTeX for hypperlinks to external documents.}
+  
+  \subsection{Module}
+  
+  Labeller Expertise Calculator
+  
+  \subsection{Uses}
+  
+  None
+
+  \subsection{Syntax}
+
+
+  
+  \subsubsection{Exported Constants}
+  None
+  \subsubsection{Exported Access Programs}
+  
+  \begin{center}
+  \begin{tabular}{p{2cm} p{4cm} p{4cm} p{2cm}}
+  \hline
+  \textbf{Name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions} \\
+  \hline
+  getExpertise & list[label], list[labeller], list[ImageObject], list[list[float]] & list[dict[string, tuple[float, float]]]  & ValueError \\
+  
+  \end{tabular}
+  \end{center}
+  
+  \subsection{Semantics}
+  
+  \subsubsection{State Variables}
+  
+ None
+  
+  \subsubsection{Environment Variables}
+  
+  None
+  
+  \subsubsection{Assumptions}
+  
+  
+  \subsubsection{Access Routine Semantics}
+  
+  \noindent getObjects(list[label] labels, list[labeller] labellers, list[ImageObject] imageobjects):
+  \begin{itemize}
+  \item transition: 
+  \item output: return the weighed success rate for each class a labeler has contributed to
+  \item exception: Let L be the set of valid Labels. Throw ValueError if ($\exists \text{label} \in \text{labels} |: \neg (\text{label} \in \text{L})$)\\
+  Let X be the set of valid Labellers. Throw ValueError if ($\exists \text{labeller} \in \text{labellers} |: \neg (\text{labeller} \in \text{X})$)\\
+  Let I be the set of valid ImageObjects. Throw ValueError if ($\exists \text{imageobject} \in \text{imageobjects} |: \neg (\text{imageobject} \in \text{I})$)\\
+  Throw ValueError if ($\exists i,j| x = \text{confidence[i][j]} : \neg (x \in \mathbb{R})$)\\
+  \end{itemize}
+
+
+  
+  % \wss{A module without environment variables or state variables is unlikely to
+  %   have a state transition.  In this case a state transition can only occur if
+  %   the module is changing the state of another module.}
+  
+  % \wss{Modules rarely have both a transition and an output.  In most cases you
+  %   will have one or the other.}
+  
+  \subsubsection{Local Functions}
+
+   
   
   % \wss{As appropriate} \wss{These functions are for the purpose of specification.
   %   They are not necessarily something that is going to be implemented
