Added Modules to 5

--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -207,18 +207,25 @@ actually be implemented.
 \midrule
 
 \multirow{7}{0.3\textwidth}{Behaviour-Hiding Module} & ?\\
-& ?\\
-& ?\\
-& ?\\
-& ?\\
-& ?\\
-& ?\\ 
+& Label Server\\
+& Label Database Connector\\
+& Label Database\\
+& ImageObject Database Connector\\
+& ImageObject Database\\
+& Labeller Database Connector\\
+& Labeller Database\\
+& Object Extraction Manager\\
+& Image Service Manager\\ 
 & ?\\
 \midrule
 
 \multirow{3}{0.3\textwidth}{Software Decision Module} & {?}\\
-& ?\\
-& ?\\
+& Label Confidence Service\\
+& Object Extraction Service\\
+& Image Prior Analyzer\\
+& Labeller Expertise Calculator\\
+& Image Mask Service\\
+& Image Selection Service\\
 \bottomrule
 
 \end{tabular}
